# rust-plugins-example

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
dlopen-sample/: Cargo.toml
dlopen-sample/src/: main.rs
plugin_interface/src/: lib.rs  swagger.rs
plugins/swagger/: Cargo.toml
plugins/swagger/src/: lib.rs
src/: main.rs
