[package]
name = "rust-plugins-example"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.0"
plugin_interface = { path = "plugin_interface", version = "*" }

[workspace]
members = [
    "plugin_interface",
    "plugins/swagger",
]