[package]
name = "rust-plugins-example"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.0"
plugin_interface = { path = "plugin_interface", version = "*" }

[workspace]
members = [
    "plugin_interface",
    "plugins/swagger",
    "dlopen-sample",
]

[tasks.format]
install_crate = "rustfmt"
command = "cargo"
args = ["fmt", "--", "--emit=files"]

[tasks.clean]
command = "cargo"
args = ["clean"]

[tasks.build]
command = "cargo"
args = ["build"]
dependencies = ["clean"]

[tasks.test]
command = "cargo"
args = ["test"]
dependencies = ["clean"]

[tasks.my-flow]
dependencies = [
    "format",
    "build",
    "test",
]