[package]
name = "dlopen-sample"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"

plugin_interface = { path = "../plugin_interface", version = "*" }
